--- a/application/index/view/order/order-detail-info.html
+++ b/application/index/view/order/order-detail-info.html
@@ -104,6 +104,7 @@
               <th>入库数量</th>
               <th>创建人</th>
               <th>创建时间</th>
+              <th>任务</th>
             </tr>
           </thead>
           <tbody>
@@ -164,7 +165,8 @@
                 <td>{$info.warehousing}</td>
                <td>{$info.create_name}</td>
 
-               <td>{$info.create_time}</td>
+            <td>{$info.create_time}</td>
+            <td><a title="任务"  href="javascript:;" onclick="x_admin_show('下达任务','{:url(\'index/ProductTask/addProductTask\',[\'id\'=>$info.id])}',600,500)" >下任务</a></td>
               </tr>
           {/volist}
           </tbody>
