--- a/application/index/view/order/order.html
+++ b/application/index/view/order/order.html
@@ -30,7 +30,7 @@
               <button type="submit" class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
             </form>
           </div>
-          <span class="x-right" style="line-height:40px">共条{$count} · 共页{$count|getInt}</span>
+          <span class="x-right" style="line-height:40px">共条{$count} · 共{$count|getInt}页</span>
         </xblock>
       <div class="layui-row">
         <div class="container-wrap">
