--- a/application/index/view/order/order_detail_add.html
+++ b/application/index/view/order/order_detail_add.html
@@ -48,6 +48,12 @@
           </div>
         </div>
         <div class="layui-inline">
+          <label class="layui-form-label">订单数量</label>
+          <div class="layui-input-inline" style="width: 100px;">
+            <input type="text" value="0"  name="order_qty[]" autocomplete="off" class="layui-input">
+          </div>
+        </div>
+        <div class="layui-inline">
           <label class="layui-form-label">计划数量</label>
           <div class="layui-input-inline" style="width: 100px;">
             <input type="text" value="0"  name="plan_qty[]" autocomplete="off" class="layui-input">
