--- a/application/index/view/product_task/add_product_task.html
+++ b/application/index/view/product_task/add_product_task.html
@@ -16,9 +16,9 @@
       </div>
     </div>
     <div class="layui-form-item">
-      <label for="process_price" class="layui-form-label">计划数量</label>
+      <label for="process_price" class="layui-form-label">任务数量</label>
       <div class="layui-input-inline">
-        <input type="text" id="cost_price" name="task_qty"  lay-verify="required"  autocomplete="off" class="layui-input"  >
+        <input type="text" id="cost_price" name="task_qty"  lay-verify="required" value="{$orderplan_qty}" autocomplete="off" class="layui-input"  >
       </div>
     </div>
 
