--- a/application/index/view/task/in-task.html
+++ b/application/index/view/task/in-task.html
@@ -102,8 +102,8 @@
       <div class="page">
        {$productTaskInfo|raw}
       </div>
-
-      <div class="x-body "  {if $model!==1}hidden{/if} style="margin-bottom: 10em">
+      {if $model==1}
+      <div class="x-body "  style="margin-bottom: 10em">
         <form  class="layui-form">
           <div class="layui-form-item">
             <label for="process_name" class="layui-form-label">任务编号</label>
@@ -158,6 +158,7 @@
           </div>
         </form>
       </div>
+      {/if}
       <script>
           layui.use(['form'], function(){
               $ = layui.jquery;
