--- a/application/index/view/task/in-task.html
+++ b/application/index/view/task/in-task.html
@@ -35,7 +35,9 @@
             <th>数量</th>
             <th>图纸工艺</th>
             <th>下达日期</th>
+            {if $model===1}
             <th>是否完成</th>
+            {/if}
             <th>要求日期</th>
             <th>设备名称</th>
             <th>备注</th>
@@ -76,6 +78,7 @@
               {/if}
             </td>
             <td>{$info.create_time}</td>
+          {if $model===1}
             <td>
               {if $info.if_completr == 1}
                   完成
@@ -83,6 +86,7 @@
                   未完成
               {/if}
             </td>
+          {/if}
             <td></td>
           <td>
             <?php $equipmentInfo = getEquipmentInfo($info['eqpmt_id']);?>
