--- a/application/index/view/order/order_add.html
+++ b/application/index/view/order/order_add.html
@@ -77,12 +77,12 @@
         <input type="checkbox" name="deliver_goods" lay-skin="switch" lay-filter="switchTest" lay-text="是|否"><div class="layui-unselect layui-form-switch" lay-skin="_switch"><em>否</em><i></i></div>
       </div>
     </div>
-    <div class="layui-form-item">
-      <label class="layui-form-label">是否完成</label>
-      <div class="layui-input-block">
-        <input type="checkbox" name="if_complete" lay-skin="switch" lay-filter="switchTest" lay-text="是|否"><div class="layui-unselect layui-form-switch" lay-skin="_switch"><em>否</em><i></i></div>
-      </div>
-    </div>
+    <!--<div class="layui-form-item">-->
+      <!--<label class="layui-form-label">是否完成</label>-->
+      <!--<div class="layui-input-block">-->
+        <!--<input type="checkbox" name="if_complete" lay-skin="switch" lay-filter="switchTest" lay-text="是|否"><div class="layui-unselect layui-form-switch" lay-skin="_switch"><em>否</em><i></i></div>-->
+      <!--</div>-->
+    <!--</div>-->
 
     <div class="layui-form-item">
       <label for="client_prj_id" class="layui-form-label">客户项目编号</label>
