--- a/application/index/view/client/client-add.html
+++ b/application/index/view/client/client-add.html
@@ -10,58 +10,57 @@
 <div class="x-body ">
     <form  class="layui-form">
         <div class="layui-form-item">
-            <label for="employee_code" class="layui-form-label">客户简称</label>
+            <label for="employee_code" class="layui-form-label">客户简称 <span style="color: red">*</span></label>
             <div class="layui-input-inline">
                 <input type="text" id="client_abbreviation" value=""  name="client_abbreviation" lay-verify="required" autocomplete="off" class="layui-input" >
             </div>
         </div>
-
         <div class="layui-form-item">
             <label for="employee_code" class="layui-form-label">客户全称</label>
             <div class="layui-input-inline">
-                <input type="text" id="client_name" value=""  name="client_name" lay-verify="required" autocomplete="off" class="layui-input" >
+                <input type="text" id="client_name" value=""  name="client_name" autocomplete="off" class="layui-input" >
             </div>
         </div>
 
         <div class="layui-form-item">
             <label for="employee_code" class="layui-form-label">负责人</label>
             <div class="layui-input-inline">
-                <input type="text" id="person_in_charge" value=""  name="person_in_charge" lay-verify="required" autocomplete="off" class="layui-input" >
+                <input type="text" id="person_in_charge" value=""  name="person_in_charge" autocomplete="off" class="layui-input" >
             </div>
         </div>
 
         <div class="layui-form-item">
             <label for="employee_code" class="layui-form-label">地址</label>
             <div class="layui-input-inline">
-                <input type="text" id="address" value=""  name="address" lay-verify="required" autocomplete="off" class="layui-input" >
+                <input type="text" id="address" value=""  name="address" autocomplete="off" class="layui-input" >
             </div>
         </div>
 
         <div class="layui-form-item">
             <label for="employee_code" class="layui-form-label">电话</label>
             <div class="layui-input-inline">
-                <input type="text" id="tle" value=""  name="tle" lay-verify="required" autocomplete="off" class="layui-input" >
+                <input type="text" id="tle" value=""  name="tle" autocomplete="off" class="layui-input" >
             </div>
         </div>
 
         <div class="layui-form-item">
             <label for="employee_code" class="layui-form-label">税法</label>
             <div class="layui-input-inline">
-                <input type="text" id="taxunm" value=""  name="taxunm" lay-verify="required" autocomplete="off" class="layui-input" >
+                <input type="text" id="taxunm" value=""  name="taxunm" autocomplete="off" class="layui-input" >
             </div>
         </div>
 
         <div class="layui-form-item">
             <label for="employee_code" class="layui-form-label">开户行</label>
             <div class="layui-input-inline">
-                <input type="text" id="opening_bank" value=""  name="opening_bank" lay-verify="required" autocomplete="off" class="layui-input" >
+                <input type="text" id="opening_bank" value=""  name="opening_bank" autocomplete="off" class="layui-input" >
             </div>
         </div>
 
         <div class="layui-form-item">
             <label for="employee_code" class="layui-form-label">银行卡号</label>
             <div class="layui-input-inline">
-                <input type="text" id="accoun_num" value=""  name="accoun_num" lay-verify="required" autocomplete="off" class="layui-input" >
+                <input type="text" id="accoun_num" value=""  name="accoun_num" autocomplete="off" class="layui-input" >
             </div>
         </div>
 
